# fileRegist

./: .gitignore
client_make/: CMakeCache.txt  CMakeLists.txt  Makefile  client  client.c  client.h  cmake_install.cmake  hello.c  test.txt  test2.txt  upload.c
server_make/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  del_file.c  del_file.h  file_upload.c  file_upload.h  mk_dir.c  mk_dir.h  mk_list.c  mk_list.h  server  server.c  server.h
server_make/uploads/: test.txt
server_make/uploads/park/: test2.txt
